--- a/shared/theme/styles/custom.css
+++ b/shared/theme/styles/custom.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-
 html.dark {
   /* default theme color */
   --slidev-primary: #161c2c;
@@ -7,9 +5,6 @@ html.dark {
   /* Custom colors*/
   --slidev-color: #f3eff5;
   --slidev-background: #161c2c;
-
-  /* Font families */
-  font-family: 'IBM Plex Serif', serif;
 
   /* Text sizes */
   --slidev-font-size: 1.1em;
@@ -112,9 +107,6 @@ html.light {
   --solarized-cyan: #2aa198;
   --solarized-green: #859900;
   
-  /* Font families */
-  font-family: 'IBM Plex Serif', serif;
-  
   /* Accent colors */
   --slidev-accents-rose: #f141a8;
   --slidev-accents-teal: var(--solarized-cyan);;
@@ -148,6 +140,9 @@ html.light {
       --slidev-code-background: transparent;
   }
 
+  .monaco-editor .view-overlays .current-line {
+      background-color: var(--slidev-code-background);
+  }
 }
 
 p.subheading {
