--- a/shared/theme/styles/custom.css
+++ b/shared/theme/styles/custom.css
@@ -143,6 +143,10 @@ html.light {
   .monaco-editor .view-overlays .current-line {
       background-color: var(--slidev-code-background);
   }
+
+  .invert-when-light-mode {
+    filter: invert(1);
+  }
 }
 
 p.subheading {
